syntax = "proto3";
package emissions.v9;

import "emissions/v3/nonce.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/allora-network/allora-chain/x/emissions/types";

// This is the full and correct definition for the worker payload.
// Note the critical customtype annotation on the `value` fields.

message InputInference {
  option (gogoproto.equal) = true;

  uint64 topic_id = 1;
  int64 block_height = 2;
  string inferer = 3;
  string value = 4 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.BoundedExp40Dec",
    (gogoproto.nullable) = false
  ];
  bytes extra_data = 5;
  string proof = 6;
}

message InputInferences {
  repeated InputInference inferences = 1;
}

message InputForecastElement {
  option (gogoproto.equal) = true;

  string inferer = 1;
  string value = 2 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.BoundedExp40Dec",
    (gogoproto.nullable) = false
  ];
}

message InputForecast {
  option (gogoproto.equal) = true;
  uint64 topic_id = 1;
  int64 block_height = 2;
  string forecaster = 3;
  repeated InputForecastElement forecast_elements = 4;
  bytes extra_data = 5;
}

message InputForecasts {
  repeated InputForecast forecasts = 1;
}

message InputInferenceForecastBundle {
  option (gogoproto.equal) = true;
  InputInference inference = 1;
  InputForecast forecast = 2;
}

message InputWorkerDataBundle {
  option (gogoproto.equal) = true;
  string worker = 1;
  emissions.v3.Nonce nonce = 2;
  uint64 topic_id = 3;
  InputInferenceForecastBundle inference_forecasts_bundle = 4;
  bytes inferences_forecasts_bundle_signature = 5;
  string pubkey = 6;
}

message InputWorkerDataBundles {
  repeated InputWorkerDataBundle worker_data_bundles = 1;
}

// Request/Response messages used by the gateway to submit the worker payload
message InsertWorkerPayloadRequest {
  string sender = 1;
  InputWorkerDataBundle worker_data_bundle = 2;
}

message InsertWorkerPayloadResponse {}